# PianoPractice

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy-pages.yml
local_server/: __init__.py  app.py
local_server/tests/: test_app.py
scripts/: setup-local.ps1  start-local.ps1
src/: App.tsx  styles.css  types.ts
src/__tests__/: audioRouting.test.tsx  chordMatcher.test.ts  curriculumIntegration.test.tsx  day14Continuous.test.tsx  learningFeatures.test.ts  midiOutput.test.ts  songPracticeCore.test.ts  songPracticeUi.test.tsx  songle.test.ts
src/components/: AudioRoutingPanel.tsx  CurrentChord.tsx  LocalAudioPlayer.tsx  Metronome.tsx  MidiPanel.tsx  PianoKeyboard.tsx  YouTubePlayer.tsx
src/modes/: CurriculumMode.tsx  GuidedChordLearningMode.tsx  HomeMode.tsx  InversionLessonMode.tsx  LessonSessionRouter.tsx  MixedTestMode.tsx  ProgressionMode.tsx  SequenceLessonMode.tsx  SixtySecondMode.tsx  SongPracticeMode.tsx  SprintMode.tsx
src/music/: chordChangeTracker.ts  chordDefinitions.ts  chordMatcher.ts  chordParser.ts  curriculum.ts  performance.ts  progressions.ts  songChordAnalysis.ts  songMidi.ts  timedChordChart.ts  ufretTiming.ts  voicings.ts
src/services/: audioEngine.ts  chordSources.ts  midiRouting.ts  midiService.ts  songle.ts  soundRouter.ts  storage.ts  tempoScheduler.ts  transcriptionClient.ts  ufret.ts  youtube.ts
